# IDPA_yolo

./: .gitignore  README.md  agent_rule.md  pyproject.toml  setup_env.bat
config/: config.py
result/train_pose_17kpt/run7/: args.yaml  results.csv
result/train_seg/run6/: args.yaml  results.csv
src/: main.py  main_pose.py
src/tests/: test_video_pipeline_pose.py  test_video_pipeline_seg.py  test_video_pipeline_seg_lines.py
src/training/: train_yolo.py  train_yolo_pose.py  train_yolo_seg.py
